Bug fix info charter not read

--- a/facmanager/local_settings.py.example
+++ b/facmanager/local_settings.py.example
@@ -12,6 +12,7 @@ ORGANIZATION_TYPES = (
          ('Composante','Composante Universitaire')
 )
 
+CHARTER_URL = 'https://example.fr/charter.html'
 
 # Web acces protections
 SITE_URL = 'https://example.fr'
