--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,4 +1,5 @@
 VITE_APP_TITLE="FabMSTIC"
+VITE_APP_CHARTER_URL="https://example.fr/charter.html"
 VITE_APP_START_HOUR="09:00:00"
 VITE_APP_END_HOUR="17:00:00"
 VITE_APP_MIN_START_MINUTE=15
